tests/NormalTests/paczka1/small_fuzzy/63944005.err
Error in line 11: A2cpEOZaQiU A509 59,0
Error in line 8: SqwGSUd A171 86,8
